# Bittorrent-client

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
src/lib/: curl.h
src/lib/curl_x64-windows/: CONTROL
src/lib/curl_x64-windows/share/curl/: vcpkg.spdx.json  vcpkg_abi_info.txt
